--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -127,7 +127,8 @@
                     <!-- Blog Post 1 -->
                     <div class="col-md-12">
                         <div class="d-flex blog-card p-3 mb-4 shadow-sm">
-                            <img src="/blogImages/<%=blogObj.blogFile%>" class="blog-image" alt="Tech Blog">
+                            <!-- <img src="/blogImages/<%=blogObj.blogFile%>" class="blog-image" alt="Tech Blog"> -->
+                            <img src="<%=blogObj.blogFile%>" class="blog-image" alt="Tech Blog">
                             <div class="blog-content pl-3">
                                 <h5><%=blogObj.blogTitle%></h5>
                                 <span><b>Uploaded On : </b> <%=blogObj.uploadDate%> | <%=blogObj.uploadTime%></span>
