--- a/views/viewUpdateBlogForm.ejs
+++ b/views/viewUpdateBlogForm.ejs
@@ -99,7 +99,7 @@
                     <input placeholder="Enter Reading Time" value="<%=blogData.timeToRead%>" name="timeToRead" id="timeToRead" class="form-control">
                   </div>
                   <span class="text-black">Existing Blog File</span> <br>
-                  <img src="/blogImages/<%=blogData.blogFile%>" height="50%" width="100%" alt=""> <br>
+                  <img src="<%=blogData.blogFile%>" height="50%" width="100%" alt=""> <br>
                   <input type="hidden" name="previousBlogFile" id="previousBlogFile" value="<%=blogData.blogFile%>">
                   <span class="text-black">Or Upload New Blog File</span>
                   <div class="form-group">
