--- a/views/adminViewTestimonialList.ejs
+++ b/views/adminViewTestimonialList.ejs
@@ -101,7 +101,7 @@
                         <td><%=testimonialObj.uploadDate%></td>
                         <td><%=testimonialObj.uploadTime%></td>
                         <td>
-                            <img src="/testimonial/<%=testimonialObj.profilePic%>" width="100" height="100" alt="">
+                            <img src="<%=testimonialObj.profilePic%>" width="100" height="100" alt="">
                         </td>
                         <td>
                             <%if(testimonialObj.adminVerify=='Verified'){%>
