--- a/views/glimphsGallery.ejs
+++ b/views/glimphsGallery.ejs
@@ -126,7 +126,7 @@
                     <tr>
                       <td><%=index+1%></td>
                       <td>
-                        <img src="/glimphsImages/<%=glimphsObj.glimphsImage%>" width="75%" height="150vh" alt="">
+                        <img src="<%=glimphsObj.glimphsImage%>" width="75%" height="150vh" alt="">
                       </td>
                       <td>
                         <form action="/admin/deleteGlimphs" method="post">
