--- a/views/studentViewAssignments.ejs
+++ b/views/studentViewAssignments.ejs
@@ -100,7 +100,7 @@
                             <%=new Date(obj.submissionDate).toISOString().split("T")[0]%>
                         </td>
                         <td>
-                          <a href="/assignment/<%=obj.assignmentDoc%>"><%=obj.assignmentDoc%></a>
+                          <a href="<%=obj.assignmentDoc%>"><%=obj.assignmentDoc%></a>
                         </td>
                       </tr>
 
