--- a/views/updateCourseForm.ejs
+++ b/views/updateCourseForm.ejs
@@ -110,7 +110,7 @@
                           <textarea placeholder="Course Description" value="<%=courseObj.courseDesc%>" name="courseDesc" id="courseDesc" class="form-control"><%=courseObj.courseDesc%></textarea>
                         </div>
                         Course Banner : 
-                        <img src="/courseImages/<%=courseObj.courseFile%>" height="50%" width="100%"  alt="">
+                        <img src="<%=courseObj.courseFile%>" height="50%" width="100%"  alt="">
                         <input type="hidden" name="previousCourseFile" id="previousCourseFile" value="<%=courseObj.courseFile%>"> <br><br>
                         Or Upload New Course Banner : 
                         <div class="form-group">
