--- a/views/testimonialForm.ejs
+++ b/views/testimonialForm.ejs
@@ -140,7 +140,7 @@
                       <input 
                         type="submit" 
                         class="btn btn-primary btn-pill" 
-                        value="Click to Login"
+                        value="Submit Testimonial"
                       />
                     </div>
                   </form>
