--- a/views/adminSideBar.ejs
+++ b/views/adminSideBar.ejs
@@ -1,24 +1,24 @@
-<div>
-    <ul>
-      <li><a href="#home-section" class="nav-link">Home</a></li>
-      <li><a href="/admin/adminCourses" class="nav-link">Courses</a></li>
-      <li><a href="/admin/adminEmployeeList" class="nav-link">Employees</a></li>
-      <li><a href="/admin/adminStudent" class="nav-link">Students</a></li>
-      <li><a href="/admin/adminViewBatches" class="nav-link">Batches</a></li>
-      <li><a href="/admin/uploadSyllabus" class="nav-link">Syllabus</a></li>
-      
-      <li class="nav-item dropdown">
-          <a href="#" class="nav-link dropdown-toggle" id="settingsDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Section</a>
-          <ul class="dropdown-menu" aria-labelledby="settingsDropdown">
-              <li><a class="dropdown-item" href="/admin/blogPage">Blog</a></li>
-              <li><a class="dropdown-item" href="/admin/domainPage">Domain</a></li>
-              <li><a class="dropdown-item" href="/admin/glimphsGallery">GlimpseGallery</a></li>
 
-            </ul>
-      </li>
-  
-      <li><a href="" class="nav-link">Logout</a></li>
-  </ul>
-  
-  </div>
-  
+<div>
+  <ul type="none">
+    <li><a href="/admin/adminHome" class="nav-link">Home</a></li>
+    <li><a href="/admin/adminCourses" class="nav-link">Courses</a></li>
+    <li><a href="/admin/adminEmployeeList" class="nav-link">Employees</a></li>
+    <li><a href="/admin/adminStudent" class="nav-link">Students</a></li>
+    <li><a href="/admin/adminViewBatches" class="nav-link">Batches</a></li>
+    <li><a href="/admin/uploadSyllabus" class="nav-link">Syllabus</a></li>
+    
+    <li class="nav-item dropdown">
+        <a href="#" class="nav-link dropdown-toggle" id="settingsDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Section</a>
+        <ul class="dropdown-menu" aria-labelledby="settingsDropdown">
+            <li><a class="dropdown-item" href="/admin/blogPage">Blog</a></li>
+            <li><a class="dropdown-item" href="/admin/domainPage">Domain</a></li>
+            <li><a class="dropdown-item" href="/admin/glimphsGallery">GlimpseGallery</a></li>
+            <li><a class="dropdown-item" href="/admin/videoGallery">VideoGallery</a></li>
+            <li><a class="dropdown-item" href="/admin/testimonialList">Testimonial</a></li>
+          </ul>
+    </li>
+    <li><a href="" class="nav-link">Logout</a></li>
+</ul>
+
+</div>
