--- a/views/adminSideBar.ejs
+++ b/views/adminSideBar.ejs
@@ -18,7 +18,7 @@
             <li><a class="dropdown-item" href="/admin/testimonialList">Testimonial</a></li>
           </ul>
     </li>
-    <li><a href="" class="nav-link">Logout</a></li>
+    <li><a href="/admin/adminLogout" class="nav-link">Logout</a></li>
 </ul>
 
 </div>
