--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,11 @@
   <title>EduSphere</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <script>
+    (()=>{
+      window.history.forward();
+    })();
+  </script>
 
 
   <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet">
@@ -98,7 +103,8 @@
     body {
       /* background-color: #000; */
       height: auto;
-      overflow: visible;
+      /* overflow: visible; */
+      overflow-x: hidden;
       /* cursor: none; */
     }
 
@@ -142,8 +148,7 @@
   </style>
 
 </head>
-
-<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+<body  data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
   <div class="site-wrap">
 
