--- a/views/adminCourses.ejs
+++ b/views/adminCourses.ejs
@@ -5,8 +5,12 @@
     <title>EduSphere</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
-    
+    <script>
+      (()=>{
+        window.history.forward();
+      })();
+    </script>
+
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
 
@@ -59,7 +63,7 @@
           <div class="row mb-5 justify-content-center">
             <div class="col-lg-7 text-center"  data-aos="fade-up" data-aos-delay="">
               <br>
-              <h2>Courses</h2>
+              <h4 class="text-black">Courses</h4>
               <span><%=message%></span>
             </div>
           </div>
