--- a/views/assignmentForm.ejs
+++ b/views/assignmentForm.ejs
@@ -6,7 +6,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    
+    <script>
+      (()=>{
+        window.history.forward();
+      })();
+    </script>
+
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
 
@@ -37,8 +42,8 @@
           <span class="icon-close2 js-menu-toggle"></span>
         </div>
       </div>
-      <div class="site-mobile-menu-body"></div>
-    </div>
+      <%-include('./employeeTrainerHomeHeaderSideBar.js')%>
+        </div>
    
 
     <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
@@ -46,15 +51,8 @@
         <div class="container-fluid">
           <div class="d-flex align-items-center">
             <div class="site-logo mr-auto"><a href="index.html">EduSphere</a></div>
-            <div>
-              <nav class="site-navigation position-relative text-right" role="navigation">
                 <%-include('./employeeTrainerHomeHeader.js')%>
-              </nav>
-             <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right">
-              <span class="icon-menu h3"></span></a>
-  
             </div>
-          </div>
         </div>
         
       </header>
@@ -73,11 +71,11 @@
             
             <div class="col-lg-6 mb-5 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="100">
               <img src="images/undraw_teaching.svg" alt="Image" class="img-fluid">
-              <form action="">
+              <!-- <form action=""> -->
                 <div class="form-group">
                   <input type="submit" class="btn btn-primary btn-block" value="View Assignment">
                 </div>
-              </form>  
+              <!-- </form>   -->
 
             </div>
   
