--- a/views/interviewSubject.ejs
+++ b/views/interviewSubject.ejs
@@ -6,6 +6,11 @@
   <title>EduSphere</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <script>
+    (()=>{
+      window.history.forward();
+    })();
+  </script>
 
 
   <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet">
