--- a/views/studentECContent.ejs
+++ b/views/studentECContent.ejs
@@ -50,7 +50,7 @@
       
       <div class="container-fluid">
         <div class="d-flex align-items-center">
-          <div class="site-logo mr-auto w-25"><a href="index.html" style="color:black">EduSphere</a></div>
+          <div class="site-logo mr-auto w-20"><a href="index.html" style="color:black">EduSphere</a></div>
 
           <%- include('./homeHeader.ejs')%>
         </div>
@@ -122,7 +122,7 @@
               </div>
               
               
-                <a href="/syllabus/<%=detailedSyllabusObj.fileName%>">
+                <a href="<%=detailedSyllabusObj.fileName%>">
                   <button class="btn btn-primary py-3 px-5 btn-pill">
                     Download Complete Syllabus
                   </button>
