--- a/views/courseList.ejs
+++ b/views/courseList.ejs
@@ -42,7 +42,7 @@
           <span class="icon-close2 js-menu-toggle"></span>
         </div>
       </div>
-      <%- include('./adminSideBar.ejs')%>
+      <%-include('./homeHeaderSideBar.ejs')%>
 
     </div>
    
@@ -52,61 +52,60 @@
         <div class="container-fluid">
           <div class="d-flex align-items-center">
             <div class="site-logo mr-auto"><a href="index.html">EduSphere</a></div>
-            <%-include('./adminHomeHeader.js')%>
+            <%- include('./homeHeader.ejs')%>
           </div>
         </div>
         
       </header>
   
-
-    <div class="site-section" id="programs-section" style="margin-top: -1px;">
-      <br>
-        <div class="container">
-        <div class="row mb-5 justify-content-center">
-          <div class="col-lg-12 text-center table table-responsive"  data-aos="fade-up" data-aos-delay="">
-            <br>
-            <h4 class="text-black">Employee List</h4>
-            <br>
-            <span style="color:green"><%=message%></span>
-            <table class="table" style="font-size: 12px; color: black;">
-                <thead>
-                  <tr>
-                    <th scope="col">Name</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Contact</th>
-                    <th scope="col">Qualification</th>
-                    <th scope="col">Experience</th>
-                    <th scope="col">Type</th>
-                    <th scope="col">Profile</th>
-                    <th scope="col">Joining Date</th>
-                    <th scope="col">EmailVerify</th>
-                    <th scope="col">AdminVerify</th>
-                </tr>
-                </thead>
-                <tbody>
-                  <%employeeList.forEach((employee,index)=>{%>
-                      <tr>
-                        <td><%=employee.name%></td>
-                        <td><%=employee.email%></td>
-                        <td><%=employee.contact%></td>
-                        <td><%=employee.qualification%></td>
-                        <td><%=employee.experience%></td>
-                        <td><%=employee.type%></td>
-                        <td><%=employee.profile%></td>
-                        <td><%=new Date(employee.joiningDate).toISOString().split("T")[0]%></td>
-                        <td><%=employee.emailVerify%></td>
-                        <td><a href="/admin/adminVerifyEmployee?enrollId=<%=employee.enrollId%>"><%=employee.adminVerify%></a></td>
-                      </tr>
-                  <%})%>
-                </tbody>
-              </table>
-
+      <div class="site-section" style="background-color: whitesmoke;margin-top: -1px;" id="courses-section">
+        <div class="container mt-5">
+          <div class="row mb-5 justify-content-center">
+            <div class="col-lg-7 text-center" data-aos="fade-up" data-aos-delay="">
+              <!-- <h2 class="section-title">Courses</h2> -->
+              <h2 class="text-black mb-4">Explore Our Tracks</h2>
+            </div>
           </div>
         </div>
-      
-
+        <!-- </div>
+      <div class="site-section courses-entry-wrap" data-aos="fade-up" data-aos-delay="100"> -->
+        <div class="container" style="margin-top: -75px;">
+          <div class="row">
+  
+            <div class="owl-carousel col-12 nonloop-block-14">
+  
+              <%courseData.forEach((obj,index)=>{%>
+                <div class="course bg-white h-100 align-self-stretch">
+                  <figure class="m-0">
+                    <a href="#"><img src="<%=obj.courseFile%>" alt="Image" class="img-fluid"></a>
+                  </figure>
+                  <div class="course-inner-text py-4 px-4">
+                    <span class="course-price">Special Discounts Available</span>
+                    <div class="meta"><span class="icon-clock-o"></span>Placement Oriented / Short Term</div>
+                    <h3><a href="#">
+                        <%=obj.courseName%>
+                      </a></h3>
+                    <p>
+                      <%=obj.courseDesc%>
+                    </p>
+                  </div>
+                  <div class="d-flex border-top stats">
+                    <div class="py-3 px-4"><span class="icon-users"></span> Limited Batch Size</div>
+                  </div>
+                </div>
+                <%})%>
+            </div>
+  
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-7 text-center">
+              <button class="customPrevBtn btn btn-primary m-1 col-md-5">Prev</button>
+              <button class="customNextBtn btn btn-primary m-1 col-md-5">Next</button>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
+  
     <%- include('./footerSection.ejs')%>
   </div> <!-- .site-wrap -->
 
