--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <script>
-    (()=>{
+    (() => {
       window.history.forward();
     })();
   </script>
@@ -148,7 +148,8 @@
   </style>
 
 </head>
-<body  data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+
+<body style="overflow-x: hidden;" data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
   <div class="site-wrap">
 
@@ -158,7 +159,7 @@
           <span class="icon-close2 js-menu-toggle"></span>
         </div>
       </div>
-      <%-include('./homeHeaderSideBar.ejs')%>
+      <%-include('. /homeHeaderSideBar.ejs')%>
     </div>
 
 
@@ -170,7 +171,7 @@
 
           <%- include('./homeHeader.ejs')%>
 
-          
+
         </div>
       </div>
 
@@ -240,6 +241,7 @@
     </div>
 
 
+
     <!-- <div class="site-section courses-title" id="courses-section"> -->
     <div class="site-section" style="background-color: whitesmoke;" id="courses-section">
       <div class="container mt-5">
@@ -255,7 +257,7 @@
       <div class="container" style="margin-top: -75px;">
         <div class="row">
 
-          <div class="owl-carousel col-12 nonloop-block-14">
+          <div class="owl-carousel  col-12 nonloop-block-14">
 
             <%courseData.forEach((obj,index)=>{%>
               <div class="course bg-white h-100 align-self-stretch">
@@ -679,7 +681,7 @@
 
 
 
-<!-- 
+    <!-- 
     <div class="site-section bg-light" id="contact-section">
       <div class="container">
 
@@ -750,7 +752,10 @@
         dots: false,
         responsive: {
           0: { items: 1 },
-          768: { items: 2 }
+          768: { items: 2 },
+          992: {
+            items: 3
+          }
         }
       });
 
