--- a/views/homeHeaderSideBar.ejs
+++ b/views/homeHeaderSideBar.ejs
@@ -4,7 +4,7 @@
       <li><a href="/" class="nav-link">
           <i class="bi bi-house-door-fill"></i>
           Home</a></li>
-      <li><a href="#courses-section" class="nav-link">
+      <li><a href="/course" class="nav-link">
           <i class="bi bi-journal-bookmark-fill"></i>
           Courses</a></li>
       <li><a href="/interview/interviewSubject" class="nav-link">
