--- a/views/adminEnquiryStudentList.ejs
+++ b/views/adminEnquiryStudentList.ejs
@@ -63,7 +63,7 @@
       <br>
         <div class="container">
         <div class="row mb-5 justify-content-center">
-          <div class="col-lg-12 text-center"  data-aos="fade-up" data-aos-delay="">
+          <div class="col-lg-12 text-center table table-responsive"  data-aos="fade-up" data-aos-delay="">
             <br>
             <h4 class="text-black">Enquired Student List</h4>
             <center>
