--- a/views/adminCourseList.ejs
+++ b/views/adminCourseList.ejs
@@ -68,7 +68,7 @@
       <br>
         <div class="container">
         <div class="row mb-5 justify-content-center">
-          <div class="col-lg-12 text-center"  data-aos="fade-up" data-aos-delay="">
+          <div class="col-lg-12 text-center table table-responsive"  data-aos="fade-up" data-aos-delay="">
             <br>
             <h4 class="text-black">Course List</h4>
             <br>
